@@ -1,3 +1,7 @@
+  - TFTP booting from host directory (Anthony Liguori)
+  - Tap device emulation for Solaris (Sittichai Palanisong)
+  - Monitor multiplexing to several I/O channels (Jason Wessel)
+
 version 0.9.0:
 
   - Support for relative paths in backing files for disk images
